addSite_and_addFood

--- a/shareness/shareness-web/pom.xml
+++ b/shareness/shareness-web/pom.xml
@@ -192,6 +192,17 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.cosmos</groupId>
+			<artifactId>cosmos-core</artifactId>
+			<version>1.1.0</version>
+		</dependency>
+		<dependency>
+		    <groupId>com.qiniu</groupId>
+		    <artifactId>qiniu-java-sdk</artifactId>
+		    <version>[7.0.0, 7.0.99]</version>
+		</dependency>
+		
+		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
 			<version>${httpClient.version}</version>
