--- a/shareness/shareness-web/src/main/resources/applicationContext.properties
+++ b/shareness/shareness-web/src/main/resources/applicationContext.properties
@@ -12,3 +12,9 @@ cookie.domain=${pom.cookie.domain}
 #login page
 #authNoLoginUrl=${pom.authNoLoginUrl}
 #authLogoutUrl=${pom.authLogoutUrl}
+qiniu_img_upload_host = http://upload.qiniu.com/
+qiniu_img_access_host = http://7xqmgd.com1.z0.glb.clouddn.com/
+qiniu_access_key =DVkCXM2pg7IXuOchBrH5E6Y_XLoyZNISNiAxv7cV
+qiniu_secret_key =VAiCidzv8ZZ1KLAr2YPq_9UEgDoXJVIx7GFaNJmw
+qiniu_bucket=shareness
+qiniu_callback_host=http://www.501314.love/qiniu/callback
